# RabbitMQClient

./: LICENSE  README.md  pyproject.toml
rabbitmq_client/: __init__.py  client.py
